overlays/kimawesome/applications/media/calibre-web-automated/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: calibre-web-automated
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - calibre.internal.kim.tec.br
  rules:
    - name: root
      backendRefs:
        - name: calibre-web-automated
          port: 8083
